# why

./: README.md  pyproject.toml  requirements.txt
eval/: qa.json
notebooks/: evaluation.ipynb
src/: __init__.py  bm25.py  chunking.py  citations.py  db.py  embeddings.py  generator.py  ingest.py  pipeline.py  retriever.py
